--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "laravel/passport": "^10.4",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.27",
         "spatie/laravel-fractal": "^6.0",
         "spatie/laravel-permission": "^5.5"
     },
